added credits, fixed light mode

--- a/src/ui.html
+++ b/src/ui.html
@@ -2,10 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
+
+    <style>
+        body {
+            padding: 1rem;
+            width: 300px;
+        }
+
+        /* dark mode */
+        @media (prefers-color-scheme: dark) {
+            body {
+                background-color: #2d2d2d;
+                color: #fff;
+            }
+        }
+    </style>
 </head>
 <body>
 
-<p>The Settings Page</p>
+<h2 style="margin-top: 0">Simplified.IO</h2>
+
+<p>Thank you for using Simplified.IO</p>
+
+<code>
+    Written by Terry Qi<br/>
+    Designed by Brian Zhang
+</code>
 
 </body>
 </html>
