allowed channels, playlist,

--- a/src/ui.html
+++ b/src/ui.html
@@ -13,7 +13,7 @@
         /* dark mode */
         @media (prefers-color-scheme: dark) {
             body {
-                background-color: #2d2d2d;
+                background-color: #252525;
                 color: #fff;
             }
         }
